--- a/src/_components/newsletter.liquid
+++ b/src/_components/newsletter.liquid
@@ -1,4 +1,4 @@
-<div class="bg-pink-700">
+<div class="bg-pink-700 mt-32">
   <div class="max-w-screen-xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center">
     <div class="lg:w-0 lg:flex-1">
       <h2 class="text-3xl leading-9 font-extrabold tracking-tight text-white sm:text-4xl sm:leading-10" id="newsletter-headline">
