--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -12,6 +12,13 @@ main {
   flex: 1;
 }
 
+#hero-container {
+  height: 100vh;
+  background-color: #FFF;
+  div { z-index: 101; }
+  img { max-height: 12rem; }
+}
+
 .nav-fixed {
   position: fixed;
   top: 0;
