--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -4,7 +4,7 @@
     <!-- <div class="flex items-center flex-1 md:absolute md:inset-y-0 md:left-0">
       <div class="flex items-center justify-between w-full md:w-auto">
         <a href="#" aria-label="Home">
-          <img class="h-8 w-auto sm:h-10" src="./images/hero.png" alt="Logo">
+          <img class="h-8 w-auto sm:h-10" src="./images/cccc-logo-1.png" alt="Logo">
         </a>
         <div class="-mr-2 flex items-center md:hidden">
           <button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out" id="main-menu" aria-label="Main menu" aria-haspopup="true">
@@ -15,13 +15,13 @@
         </div>
       </div>
     </div> -->
-    
+
     <!-- nav items -->
     <!-- space out nav items with space-x-# -->
     <div class="hidden md:flex md:space-x-24 text-2xl font-bold">
       <div>
         <a href="#" class="font-large text-black hover:text-pink-700 transition duration-150 ease-in-out uppercase">Home</a>
-      </div>  
+      </div>
       <div>
         <a href="#" class="font-large text-black hover:text-pink-700 transition duration-150 ease-in-out uppercase">Blog</a>
       </div>
