--- a/src/_layouts/post.liquid
+++ b/src/_layouts/post.liquid
@@ -6,7 +6,7 @@ layout: default
 </div>
 
 <div class="lg:container py-0 px-8 mx-auto">
-  <section class="grid post gap-20 items-stretch my-12 mx-0">
+  <section class="grid items-stretch post gap-20 my-12 mx-0">
     <article>
       <header class="pt-0 mb-12" id="article-header">
         <div class="lg:container py-0 px-8 mx-auto">
