--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -41,15 +41,20 @@ layout: default
                       <br />
                       Creators
                     </span>
-                  </h2>
+                  </h2>flex
                 </div>
               </div> {% endcomment %}
 
               <!-- hero image -->
-              <div class="flex items-center justify-between w-full md:w-auto">
-                <a href="#" aria-label="Home">
-                  <img class="" src="./images/cccc-logo-1.png" alt="Logo">
-                </a>
+              <!-- flex items-center justify-between w-full md:w-auto -->
+             <div class="flex hero flex-wrap">
+                <img class="sm:mx-auto md:p-4 lg:p-2 xl:p-0 border border-pink-900" src="./images/logo.png" alt="Logo">
+                <div class="flex-col items-center self-center sm:mx-auto md:p-4 lg:p-2 xl:p-0 border border-green-900 border-4 border-dashed">
+                  <span class="block sm:text-2xl md:text-4xl lg:text-7xl xl:text-8xl font-hero border border-red-600">
+                    <span class="base-dark">Canny</span><span class="deep-pink">Code</span>
+                  </span>
+                  <span class="block base-gray sm:text-lg md:text-xl lg:text-2xl xl:text-3xl font-tagline border border-blue-400">> for Curious Creators _</span>
+                </div>
               </div>
             </div>
 
