--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -5,5 +5,7 @@
 
 <meta name="description" content="{{ metadata.description }}" />
 
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 <link rel="stylesheet" href="{% webpack_path css %}" />
 <script src="{% webpack_path js %}" defer></script>
